--- a/about.html
+++ b/about.html
@@ -65,7 +65,7 @@
 
       <div class="bio">
         <h3 class="text-secondary">Hello World! </h3>
-        <p>HI, I am Arnav Singh, I am Second Year Computer Science student at Jacobs University Bremen. I like being challenged and tackle problems thrown at me. I appreciate different perspectives and like working in groups, but can also work in an independent self-sustained environment.</p>
+        <p>Hello, I am Arnav Singh, I am Second Year Computer Science student at Jacobs University Bremen. I like being challenged and tackle problems thrown at me. I appreciate different perspectives and like working in groups, but can also work in an independent self-sustained environment.</p>
       </div>
 
       <div class="job job-1">
